# fidelio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VSCode.CMakeLists.txt  WINDOWS.md  attestation-cert.conf  mkcert.bat  mkcert.sh
scripts/: fido2_flow.py
src/: button.h  cert.c  cert.h  ctap2.c  ctap2.h  device_state.h  fdo.c  fdo.h  fidelio.c  indicator.c  indicator.h  led.c  led.h  pins.h  presence.c  presence.h  rand.c  sys_stubs.c  tusb_config.h  u2f.c  usb_descriptors.c  usb_descriptors.h  user_settings.h
